# papinst

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cmake/: FindBoost.cmake  FindClang.cmake  FindFmt.cmake  FindGoogleTest.cmake  FindJson.cmake  FindSpdlog.cmake  config.cmake.in
data/: README.md
data/fibonacci/: README.md  paptrace.json  paptrace_expr_data.json
examples/: .gitignore  control_flow.cpp  simple.cpp
examples/demo/: .gitignore  CMakeLists.txt
examples/demo/benchmarks/: demo.benchmark.cpp
examples/demo/cmake/: FindBenchmark.cmake  FindGoogleTest.cmake  FindPaptrace.cmake
examples/demo/include/demo/: demo.h
examples/demo/src/: demo.cpp
examples/demo/tests/: demo.test.cpp
examples/demo/tools/: benchmark  build  build_perf  test
experiments/demo/: .gitignore  README.md
experiments/demo/data/: known_exprs.json  paptrace.darwin-arm64-clang.json  paptrace.darwin-arm64-gcc.json  paptrace.linux-x86_64-clang.json  paptrace.linux-x86_64-gcc.json  trace_exprs.darwin-arm64-clang.json  trace_exprs.darwin-arm64-gcc.json  trace_exprs.linux-x86_64-clang.json
experiments/demo/data/processed/: trace_exprs.darwin-arm64-clang.json  trace_exprs.darwin-arm64-gcc.json  trace_exprs.darwin-x86_64-clang.json  trace_exprs.darwin-x86_64-gcc.json  trace_exprs.debian-x86_64-clang.json  trace_exprs.debian-x86_64-gcc.json  trace_exprs.linux-x86_64-clang.json  trace_exprs.linux-x86_64-gcc.json
experiments/demo/data/raw/: known_exprs.json  paptrace.darwin-arm64-clang.json  paptrace.darwin-arm64-gcc.json  paptrace.debian-x86_64-clang.json  paptrace.debian-x86_64-gcc.json  paptrace.linux-x86_64-clang.json  paptrace.linux-x86_64-gcc.json
experiments/demo/joern/: joern.sc
experiments/demo/scripts/: analyze_traces.py  collect_data.py  run_tests.py
experiments/demo/tests/: conftest.py  test_demo.py
experiments/demo/tools/: alt_summarize_models.py  analyze_traces.py  collect_data.py  generate_cfgs.sh  profile_time.py  run_tests.py  summarize_models.py
include/pathinst/: clang_parser.h  cli.h  consumer.h  frontend_action.h  functioncall_transformer.h  instrumenter.h  parser.h  path_cap.h  pathinst.h  transformer.h  utils.h
include/wrapper/: logger.h  program_options.h
notebooks/: 1-call-context-analysis.ipynb  1-call-context-summary.ipynb  1-demo-analysis.ipynb  1-fibonacci-analysis.ipynb  2-demo-analysis.ipynb  2-fibonacci-analysis.ipynb  2-trace-and-call-trees.ipynb  2-trace-path-summary.ipynb  3-trace-expressions.ipynb  3-trace-trees.ipynb
papinst/: CMakeLists.txt  README.md
papinst/include/papinst/: ast_consumer.h  ast_consumer_listener.h  ast_visitor.h  cli.h  exception.h  frontend_action.h  instrumenter.h  logger.h  match_callback.h  parser.h  utils.h  version.h
papinst/src/: ast_consumer.cpp  ast_consumer_listener.cpp  ast_visitor.cpp  cli.cpp  frontend_action.cpp  instrumenter.cpp  logger.cpp  match_callback.cpp  papinst.main.cpp  parser.cpp  utils.cpp
papinst/tests/: ast_consumer_listener.test.cpp  ast_visitor.test.cpp  cli.test.cpp  frontend_action.test.cpp  instrumenter.test.cpp  test_cli.py  test_pcc.py  utils.py
papinst/tests/include/papinst/: mock_ast_consumer_listener.h  mock_ast_visitor.h  mock_instrumenter.h  mock_logger.h
papinst/tests/mocks/: mock_instrumenter.h
papinst/tools/: pcc
paptrace/: CMakeLists.txt
paptrace/data/: README.md
paptrace/data/fibonacci/: README.md  paptrace.json  recursive_memo_0.json  recursive_memo_2.json  recursive_memo_4.json  recursive_naive_0.json  recursive_naive_2.json  recursive_naive_4.json  request.json  requests.json
paptrace/include/gtest/: gtest.hh
paptrace/include/paptrace/: paptrace.h  utils.h
paptrace/src/: gtest.cc  paptrace.cpp
paptrace/tools/: analysis.py  clianalyze  clitrace
paptree/: README.md  pyproject.toml
paptree/src/paptree/: __init__.py  analyze.py  node.py  regression.py  tree.py
paptree/tests/: test_node.py  test_packaging.py  test_tree.py  test_utils.py
pathinst/: CMakeLists.txt  README.md
pathinst/include/pathinst/: cli.h  exception.h  parser.h  utils.h  version.h
pathinst/src/: frontend_action.cpp  instrumenter.cpp  parser.cpp  pathinst.main.cpp
pathinst/tests/: frontend_action.test.cpp  instrumenter.test.cpp  test_cli.py
pathinst/tests/mocks/: mock_instrumenter.h
pathtrace/: CMakeLists.txt
pathtrace/include/pathtrace/: pathtrace.h
pathtrace/src/: pathtrace.cpp
src/: clang_parser.cpp  cli.cpp  consumer.cpp  frontend_action.cpp  functioncall_transformer.cpp  instrumenter.cpp  logger.cpp  main.cpp  parser.cpp  pathinst.cpp  pathinst.main.cpp  program_options.cpp  transformer.cpp  utils.cpp
tests/: cli.test.cpp  frontend_action.test.cpp  logger.test.cpp  program_options.test.cpp  test_cli.py  utils.py
tools/: FindPaptools.cmake  FindPathInst.cmake  assert.py  build  format  format.sh  pcc  process_traces.py
