[project]
name = "paptree"
description = "Tree library for paptools data."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Ian Dinwoodie", email = "dinwoodieian@gmail.com"}
]
keywords = ["paptools", "tree"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "anytree>=2.8.0",
]

[project.urls]
repository = "https://github.com/iandinwoodie/paptools"

[tool.black]
line-length = 80
preview = true
include = '\.pyi?$'
